Client localization added

--- a/src/main/resources/i18n/common.properties
+++ b/src/main/resources/i18n/common.properties
@@ -1,7 +1,10 @@
 log.out=Log out
 main.page=Main Page
-create.activity=Create Activity
+create.new.report=Create new report
+change.inspector=Request Inspector Change
 title=Title
+status=Status
+all.reports=All Reports
 description=Description
 time=Time
 type.activity.description=Type activity description
@@ -12,5 +15,6 @@ user.name=User Name
 select.activity=Select Activity
 assign.task=Assign task
 login=Login
+request.activity=
 
 
