Inspector header localization added

--- a/src/main/resources/i18n/common.properties
+++ b/src/main/resources/i18n/common.properties
@@ -6,15 +6,12 @@ title=Title
 status=Status
 all.reports=All Reports
 description=Description
+new.reports=New Reports
 time=Time
-type.activity.description=Type activity description
-delete.activity=Delete Activity
 language.en=English
 language.ru=Russian
 user.name=User Name
-select.activity=Select Activity
-assign.task=Assign task
 login=Login
-request.activity=
+
 
 
