Inspector page localization added

--- a/src/main/resources/i18n/common.properties
+++ b/src/main/resources/i18n/common.properties
@@ -7,6 +7,8 @@ status=Status
 all.reports=All Reports
 description=Description
 new.reports=New Reports
+client.name=Client Name
+view=View
 time=Time
 language.en=English
 language.ru=Russian
