--- a/src/main/resources/i18n/common.properties
+++ b/src/main/resources/i18n/common.properties
@@ -10,10 +10,23 @@ new.reports=New Reports
 client.name=Client Name
 view=View
 time=Time
+requests=Requests
 language.en=English
 language.ru=Russian
 user.name=User Name
 login=Login
+inspectors=Inspectors
+clients=Clients
+assign.inspector=Assign Inspector
+inspector.name=Inspector Name
+inspector.clients=Inspector's clients
+company.name=Company Name
+reports=Reports
+clients.report=Client's Reports
+report.content=Report content
+save=Save
+delete=Delete
+cancel=Cancel
 
 
 
