--- a/src/main/resources/i18n/common.properties
+++ b/src/main/resources/i18n/common.properties
@@ -5,7 +5,6 @@ change.inspector=Request Inspector Change
 title=Title
 status=Status
 all.reports=All Reports
-description=Description
 new.reports=New Reports
 client.name=Client Name
 view=View
@@ -27,6 +26,19 @@ report.content=Report content
 save=Save
 delete=Delete
 cancel=Cancel
+client.registration=Client Registration
+first.name=First name
+enter.first.name=Enter first name
+last.name=Last name
+enter.last.name=Enter last name
+email=Email
+example=Example:
+password=Password
+sign.up=Sign Up
+edit=Edit
+reason.to.reject=Reason to reject
+accept=Accept
+decline=Decline
 
 
 
